Refactored and removed titlebar from splashscreen

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
 <ion-menu [content]="content">
-  <page-tg-menu></page-tg-menu>
+  <tg-menu></tg-menu>
 </ion-menu>
 <ion-nav [root]="rootPage" #content></ion-nav>
