--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -3,7 +3,7 @@
     <ion-list-header style="padding-top: 16px;">
       Lists
     </ion-list-header>
-    <button class="tg-list-item" ion-item *ngFor="let item of lists">{{item}}
+    <button class="tg-list-item" ion-item *ngFor="let item of lists" (click)="changeList(item)">{{item.name}}
       <ion-icon md="ios-arrow-forward" item-right></ion-icon>
     </button>
   </ion-list>
