--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -26,7 +26,7 @@ $font-path: "../assets/fonts";
 $colors: (
   primary:    #283593,
   secondary:  #32db64,
-  danger:     #f53d3d,
+  danger:     #c62828,
   light:      #f4f4f4,
   dark:       #222
 );
