--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -1,9 +1,9 @@
 <ion-content>
   <ion-list no-lines>
     <ion-list-header style="padding-top: 16px;">
-      Lists
+      Stores
     </ion-list-header>
-    <button class="tg-list-item" ion-item *ngFor="let item of lists" (click)="changeList(item)">{{item.name}}
+    <button class="tg-list-item" ion-item *ngFor="let item of lists" (press)="presentActionSheet(item)" on-tap="changeList(item)">{{item.name}}
       <ion-icon md="ios-arrow-forward" item-right></ion-icon>
     </button>
   </ion-list>
@@ -12,7 +12,7 @@
   <ion-toolbar class="bottom-footer">
     <button ion-button full icon-left clear color="primary" (click)="addNewList()">
         <ion-icon name="add"></ion-icon>
-        Add new list
+        Add new store
       </button>
   </ion-toolbar>
 </ion-footer>
