--- a/src/components/popover/popover.html
+++ b/src/components/popover/popover.html
@@ -1,20 +1,4 @@
-<ion-list padding-top radio-group class="popover-page">
-  <ion-item class="text-athelas" padding-right>
-    <ion-label>Hello</ion-label>
-  </ion-item>
-  <ion-item class="text-athelas" padding-right>
-    <ion-label>World</ion-label>
-  </ion-item>
-  <ion-item class="text-athelas" padding-right>
-    <ion-label>About</ion-label>
-  </ion-item>
-  <ion-item class="text-athelas" padding-right>
-    <ion-label>Home</ion-label>
-  </ion-item>
-  <ion-item class="text-athelas" padding-right>
-    <ion-label>Help</ion-label>
-  </ion-item>
-  <ion-item class="text-athelas" padding-right>
-    <ion-label>Test</ion-label>
-  </ion-item>
+<ion-list no-lines padding-top class="popover-page">
+  <button ion-item>About</button>
+  <button ion-item>Help</button>
 </ion-list>
