--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -3,7 +3,8 @@
     <ion-list-header style="padding-top: 16px;">
       Stores
     </ion-list-header>
-    <button class="tg-list-item" ion-item *ngFor="let item of lists" (press)="presentActionSheet(item)" on-tap="changeList(item)">{{item.name}}
+    <button class="tg-list-item" [ngClass]="{active: currentStore.name === item.name}" ion-item *ngFor="let item of lists" (press)="presentActionSheet(item)"
+      on-tap="changeList(item, true)">{{item.name}}
       <ion-icon md="ios-arrow-forward" item-right></ion-icon>
     </button>
   </ion-list>
