--- a/src/components/addItem/addItem.html
+++ b/src/components/addItem/addItem.html
@@ -14,7 +14,7 @@
       <ion-col>
         <ion-item style="padding-left: 0;">
           <ion-label floating>Item Name</ion-label>
-          <ion-input [(ngModel)]="addItemModel.name" type="text"></ion-input>
+          <ion-input tabindex="0" [(ngModel)]="addItemModel.name" type="text"></ion-input>
         </ion-item>
       </ion-col>
     </ion-row>
@@ -22,25 +22,20 @@
       <ion-col width-50>
         <ion-item style="padding-left: 0;">
           <ion-label floating>Quantity</ion-label>
-          <ion-input [(ngModel)]="addItemModel.quantity" type="text"></ion-input>
+          <ion-input tabindex="1" [(ngModel)]="addItemModel.quantity" type="text"></ion-input>
         </ion-item>
       </ion-col>
       <ion-col width-50>
         <ion-item>
           <ion-label>Unit</ion-label>
-          <ion-select [(ngModel)]="unit">
-            <ion-option value="pack">Pack</ion-option>
-            <ion-option value="litre">Litre</ion-option>
-            <ion-option value="kilos">Kilos</ion-option>
-            <ion-option value="gallon">Gallon</ion-option>
-            <ion-option value="pounds">Pounds</ion-option>
-            <ion-option value="snes">SNES</ion-option>
+          <ion-select tabindex="2" [(ngModel)]="addItemModel.unit">
+            <ion-option *ngFor="let item of units" [value]="mapUnitsInNumber(item)">{{item}}</ion-option>
           </ion-select>
         </ion-item>
       </ion-col>
     </ion-row>
     <ion-row margin-top>
-      <button margin-top ion-button full color="primary">Add</button>
+      <button tabindex="3" margin-top ion-button full color="primary" on-tap="addNewItem()">Add</button>
     </ion-row>
   </ion-grid>
 </ion-content>
