--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -34,4 +34,43 @@ page-home {
       }
     }
   }
+  .search-bar {
+    width: 0px;
+    height: 0px;
+    .searchbar-search-icon {
+      display: none;
+    }
+    .searchbar-input {
+      padding: 0;
+      -webkit-transition: padding 0.5s;
+      /* For Safari 3.1 to 6.0 */
+      transition: padding 0.5s;
+    }
+    -webkit-transition: width 0.5s,
+    height 2s;
+    /* For Safari 3.1 to 6.0 */
+    transition: width 0.5s,
+    height 2s;
+  }
+  .search-bar.animate {
+    width: 100%;
+    height: 100%;
+    .searchbar-search-icon {
+      display: initial;
+    }
+    .searchbar-input {
+      padding: 6px 55px;
+    }
+  }
+  .srbar-back-parent {
+    min-width: 44px;
+    margin: 0 6px;
+  }
+  .srbar-back {
+    -webkit-transition: opacity 0.8s;
+    opacity: 0;
+  }
+  .srbar-back.animate {
+    opacity: 1 !important;
+  }
 }
