--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -6,7 +6,7 @@
 
     <button ion-item *ngFor="let store of stores" 
             (click)="selectStore($event, store)" 
-            [ngClass]="{'activated': currentStore && currentStore.name === store.name}"
+            [ngClass]="{'active': currentStore && currentStore.name === store.name}"
             (press)="openStoreOptions(store)">
       <ion-icon hideWhen="ios" name="ios-arrow-forward" item-right></ion-icon>
       {{store.name}}
