--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -4,7 +4,7 @@
       STORES
     </ion-list-header>
 
-    <button ion-item *ngFor="let store of stores" 
+    <button ion-item *ngFor="let store of (factory.stores | async)" 
             (click)="selectStore($event, store)" 
             [ngClass]="{'active': currentStore && currentStore.name === store.name}"
             (press)="openStoreOptions(store)">
