--- a/src/components/addItem/addItem.html
+++ b/src/components/addItem/addItem.html
@@ -9,26 +9,28 @@
   </ion-toolbar>
 </ion-header>
 <ion-content add-item-content>
-  <ion-list inset>
+  <form #f="ngForm" novalidate>
+    <ion-list inset>
 
-    <ion-item>
-      <ion-label floating>Item Name</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Item Name</ion-label>
+        <ion-input type="text" name="name" ngModel #name="ngModel"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label floating>Quantity</ion-label>
-      <ion-input type="number"></ion-input>
-    </ion-item>
+      <ion-item>
+        <ion-label floating>Quantity</ion-label>
+        <ion-input type="number" name="quantity" ngModel #quantity="ngModel"></ion-input>
+      </ion-item>
 
-    <ion-item>
-      <ion-label>Unit</ion-label>
-      <ion-select [(ngModel)]="unit">
-        <ion-option *ngFor="let u of getUnits()" val='u'>{{getUnitInString(u)}}</ion-option>
-      </ion-select>
-    </ion-item>
-  </ion-list>
-  <div padding>
-    <button ion-button block>Add</button>
-  </div>
+      <ion-item>
+        <ion-label>Unit</ion-label>
+        <ion-select name="unit" ngModel #unit="ngModel">
+          <ion-option *ngFor="let u of getUnits()" value='{{u}}'>{{getUnitByKey(u)}}</ion-option>
+        </ion-select>
+      </ion-item>
+    </ion-list>
+    <div padding>
+      <button ion-button block (click)="addNewItem(f)">Add</button>
+    </div>
+  </form>
 </ion-content>
