--- a/src/components/addItem/addItem.html
+++ b/src/components/addItem/addItem.html
@@ -14,7 +14,7 @@
 
       <ion-item>
         <ion-label floating>Item Name</ion-label>
-        <ion-input type="text" name="name" ngModel #name="ngModel"></ion-input>
+        <ion-input type="text" name="name" ngModel #name="ngModel" maxlength="20"></ion-input>
       </ion-item>
 
       <ion-item>
