--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,13 @@ $colors: (
   secondary:  #32db64,
   danger:     #d32f2f,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  full-light: #fff,
+  md-blue:    #283593,
+  md-green:   #2E7D32,
+  md-red:     #c62828,
+  md-purple:  #4527A0,
+  md-grey:    #37474F
 );
 
  
