--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -34,7 +34,12 @@ $colors: (
   md-green:   #2E7D32,
   md-red:     #c62828,
   md-purple:  #4527A0,
-  md-grey:    #37474F
+  md-grey:    #37474F,
+  md-green-alpha: rgba(46,125,50 ,0.2),
+  md-blue-alpha: rgba(40,53,147 ,0.2),
+  md-red-alpha: rgba(198,40,40 ,0.2),
+  md-purple-alpha: rgba(106,27,154 ,0.2),
+  md-grey-alpha: rgba(55,71,79 ,0.2)
 );
 
  
