--- a/src/components/menu/menu.html
+++ b/src/components/menu/menu.html
@@ -8,6 +8,7 @@
             (click)="selectStore($event, store)" 
             [ngClass]="{'active': currentStore && currentStore.name === store.name}"
             (press)="openStoreOptions(store)">
+            <div class="abs-border" ></div>
       <ion-icon hideWhen="ios" name="ios-arrow-forward" item-right></ion-icon>
       {{store.name}}
     </button>
