--- a/src/components/popover/popover.html
+++ b/src/components/popover/popover.html
@@ -1,9 +1,7 @@
 <ion-content tg-popover>
   <ion-list no-lines>
-    <button ion-item>Button</button>
-    <button ion-item>Button</button>
-    <button ion-item>Button</button>
-    <button ion-item>Button</button>
+    <button ion-item>About</button>
+    <button ion-item>Help</button>
     <ion-item tg-theme-select>
       <div tg-theme-item-border (click)="changeTheme('md-blue')">
         <div tg-theme-item-color blue></div>
