--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,7 +39,12 @@ $colors: (
   md-blue-alpha: rgba(40,53,147 ,0.2),
   md-red-alpha: rgba(198,40,40 ,0.2),
   md-purple-alpha: rgba(106,27,154 ,0.2),
-  md-grey-alpha: rgba(55,71,79 ,0.2)
+  md-grey-alpha: rgba(55,71,79 ,0.2),
+  md-green-dark: rgba(27,94,32 ,1),
+  md-blue-dark: rgba(26,35,126 ,1),
+  md-red-dark: rgba(183,28,28 ,1),
+  md-purple-dark: rgba(49,27,146 ,1),
+  md-grey-dark: rgba(38,50,56 ,1)
 );
 
  
