fixing list height

--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -107,6 +107,8 @@
       @include grid();
       ion-checkbox {
         margin-left: 0px;
+        margin-top: 0px;
+        margin-bottom: 0px;
       }
     }
     .quantity-unit-block {
