--- a/src/components/itemPopover/itemPopover.scss
+++ b/src/components/itemPopover/itemPopover.scss
@@ -2,14 +2,17 @@
   padding: 5px 0px;
   ion-list {
     margin: 0px !important;
-    .ion-item,
-    .item {
+    .ion-item:not(.item-divider),
+    .item:not(.item-divider) {
       border-top: 1px solid color($colors, light) !important;
       min-height: 46px;
     }
-    .ion-item:last-child,
-    .item:last-child {
+    .ion-item:last-child:not(.item-divider),
+    .item:last-child:not(.item-divider) {
       border-bottom: 1px solid color($colors, light) !important;
+    }
+    .item-divider {
+      max-height: 25px;
     }
   }
 }
