finishing appSettings and refactor

--- a/src/components/addItem/addItem.html
+++ b/src/components/addItem/addItem.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar [color]="factory.theme | async">
+  <ion-toolbar [color]="(factory.appSettings | async).theme">
     <ion-title>Add Item</ion-title>
     <ion-buttons end>
       <button ion-button icon-only (click)="closeModal($event)">
@@ -13,24 +13,24 @@
     <ion-list inset>
 
       <ion-item>
-        <ion-label [color]="factory.theme | async" floating>Item Name</ion-label>
+        <ion-label [color]="(factory.appSettings | async).theme" floating>Item Name</ion-label>
         <ion-input type="text" name="name" ngModel #name="ngModel" maxlength="20"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label [color]="factory.theme | async" floating>Quantity</ion-label>
+        <ion-label [color]="(factory.appSettings | async).theme" floating>Quantity</ion-label>
         <ion-input type="number" name="quantity" ngModel #quantity="ngModel" (keypress)="validateQuantity($event, f)"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label [color]="factory.theme | async">Unit</ion-label>
+        <ion-label [color]="(factory.appSettings | async).theme">Unit</ion-label>
         <ion-select name="unit" ngModel #unit="ngModel" class="helloworld">
           <ion-option *ngFor="let u of getUnits()" value='{{u}}' theme>{{getUnitByKey(u)}}</ion-option>
         </ion-select>
       </ion-item>
     </ion-list>
     <div padding>
-      <button ion-button block [color]="factory.theme | async" (click)="addNewItem(f)">Add</button>
+      <button ion-button block [color]="(factory.appSettings | async).theme" (click)="addNewItem(f)">Add</button>
     </div>
   </form>
 </ion-content>
