more sort items

--- a/src/components/itemPopover/itemPopover.html
+++ b/src/components/itemPopover/itemPopover.html
@@ -3,16 +3,24 @@
     <ion-item-group>
       <ion-item-divider color="light">Sort</ion-item-divider>
       <ion-item>
+        <ion-label>Newest Last</ion-label>
+        <ion-radio value="1"></ion-radio>
+      </ion-item>
+      <ion-item>
+        <ion-label>Newest First</ion-label>
+        <ion-radio value="2"></ion-radio>
+      </ion-item>
+      <ion-item>
         <ion-label>Sort by Name</ion-label>
-        <ion-radio value="sortByName"></ion-radio>
+        <ion-radio value="3"></ion-radio>
       </ion-item>
       <ion-item>
         <ion-label>Sort by Quantity</ion-label>
-        <ion-radio value="sortByQuantity"></ion-radio>
+        <ion-radio value="4"></ion-radio>
       </ion-item>
       <ion-item>
         <ion-label>Sort by Unit</ion-label>
-        <ion-radio value="sortByUnit"></ion-radio>
+        <ion-radio value="5"></ion-radio>
       </ion-item>
     </ion-item-group>
     <ion-item-group>
