--- a/src/components/itemPopover/itemPopover.html
+++ b/src/components/itemPopover/itemPopover.html
@@ -31,7 +31,7 @@
     </ion-item-group>
     <ion-item-group>
       <ion-item-divider color="light">Delete</ion-item-divider>
-      <button ion-item>Delete All</button>
+      <button ion-item (click)="deleteAllItems($event)">Delete All</button>
     </ion-item-group>
   </ion-list>
 </ion-content>
