adding partial about page

--- a/src/components/popover/popover.html
+++ b/src/components/popover/popover.html
@@ -1,6 +1,6 @@
 <ion-content tg-popover>
   <ion-list no-lines>
-    <button ion-item>About</button>
+    <button ion-item (click)="gotoAbout()">About</button>
     <button ion-item>Help</button>
     <ion-item tg-theme-select>
       <div tg-theme-item-border (click)="changeTheme('md-blue')">
