--- a/src/components/popover/popover.html
+++ b/src/components/popover/popover.html
@@ -3,19 +3,19 @@
     <button ion-item (click)="gotoAbout()">About</button>
     <button ion-item>Help</button>
     <ion-item tg-theme-select>
-      <div tg-theme-item-border (click)="changeTheme('md-blue')">
+      <div tg-theme-item-border (click)="changeTheme('md-blue', '#283593')">
         <div tg-theme-item-color blue></div>
       </div>
-      <div tg-theme-item-border (click)="changeTheme('md-green')">
+      <div tg-theme-item-border (click)="changeTheme('md-green', '#2E7D32')">
         <div tg-theme-item-color green></div>
       </div>
-      <div tg-theme-item-border (click)="changeTheme('md-red')">
+      <div tg-theme-item-border (click)="changeTheme('md-red', '#c62828')">
         <div tg-theme-item-color red></div>
       </div>
-      <div tg-theme-item-border (click)="changeTheme('md-purple')">
+      <div tg-theme-item-border (click)="changeTheme('md-purple', '#4527A0')">
         <div tg-theme-item-color purple></div>
       </div>
-      <div tg-theme-item-border (click)="changeTheme('md-grey')">
+      <div tg-theme-item-border (click)="changeTheme('md-grey', '#37474F')">
         <div tg-theme-item-color grey></div>
       </div>
     </ion-item>
