--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -62,6 +62,14 @@
   .scroll-content {
     padding: 0px !important;
   }
+  .item-no-data {
+    text-align: center;
+    opacity: 0.5;
+    margin-top: 20px;
+    .item-no-data-plus {
+      font-size: 22px;
+    }
+  }
   .store-item-list {
     .item-ios {
       border-bottom: 1px solid $item-ios-divider-color;
