fixing scroll issue

--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -66,6 +66,7 @@
   padding: 0px !important;
   .scroll-content {
     padding: 0px !important;
+    overflow-y: auto !important;
   }
   .item-no-data {
     text-align: center;
